--- a/TSS_electroWaveFunction_code.ipynb
+++ b/TSS_electroWaveFunction_code.ipynb
@@ -511,7 +511,7 @@
     "        y=np.concatenate([[0], psi_1s_squared[mask], [0]]),\n",
     "        fill='tozeroy',\n",
     "        mode='lines',\n",
-    "        fillcolor='rgba(255,0,255,0.4)',\n",
+    "        fillcolor='rgba(255,0,255,0.25)',\n",
     "        line=dict(color='magenta', width=0),\n",
     "        showlegend=False\n",
     "    ), row=1, col=1)\n",
@@ -529,7 +529,7 @@
     "        y=np.concatenate([[0], radial_probability[mask], [0]]),\n",
     "        fill='tozeroy',\n",
     "        mode='lines',\n",
-    "        fillcolor='rgba(255,255,0,0.4)',\n",
+    "        fillcolor='rgba(255,255,0,0.25)',\n",
     "        line=dict(color='yellow', width=0),\n",
     "        showlegend=False\n",
     "    ), row=1, col=2)\n",
@@ -616,20 +616,8 @@
     "# === Step 2: Generate Random Points Based on Probability Density ===\n",
     "N = 10000  # Number of points to visualize\n",
     "\n",
-    "r_samples = []\n",
-    "attempts = 0\n",
-    "\n",
-    "# Rejection sampling for correct r² * exp(-2r/a₀) distribution\n",
-    "while len(r_samples) < N:\n",
-    "    r_try = np.random.exponential(scale=a0/2)\n",
-    "    acceptance_prob = (r_try**2) / ((3 * (a0/2)**2))\n",
-    "    if np.random.rand() < acceptance_prob:\n",
-    "        r_samples.append(r_try)\n",
-    "    attempts += 1\n",
-    "    if attempts > 10 * N:\n",
-    "        break\n",
-    "\n",
-    "r = np.array(r_samples)\n",
+    "# Direct sampling using a Gamma distribution\n",
+    "r = np.random.gamma(shape=3, scale=a0/2, size=N)\n",
     "r = r[r < 5 * a0]  # Limit extreme outliers for better visualization\n",
     "\n",
     "# Random angular sampling\n",
@@ -638,7 +626,7 @@
     "\n",
     "# === Step 3: Hydrogen 1s Wavefunction Values ===\n",
     "radial_part = np.exp(-r/a0)\n",
-    "angular_part = 1 / np.sqrt(4 * np.pi)\n",
+    "angular_part = 1 / np.sqrt(np.pi * a0**3)\n",
     "psi_1s = radial_part * angular_part\n",
     "\n",
     "# === Step 4: Convert to Cartesian Coordinates ===\n",
@@ -784,8 +772,8 @@
     "z_base = r * np.cos(theta)\n",
     "\n",
     "# === Step 3: Define 2p Orbital Wavefunctions ===\n",
-    "norm_radial = 1 / (4 * np.sqrt(6))  # Normalization constant\n",
-    "radial_part = norm_radial * (r/a0) * np.exp(-r/(2*a0))\n",
+    "norm_radial = 1 / (4 * np.sqrt(2 * np.pi * a0**5))  # Normalization constant\n",
+    "radial_part = norm_radial * r * np.exp(-r/(2*a0))\n",
     "\n",
     "# Angular parts\n",
     "angular_pz = np.cos(theta)\n",
